Notification system,enum using

--- a/JobPortalSystem/JobPortalSystem.csproj
+++ b/JobPortalSystem/JobPortalSystem.csproj
@@ -8,8 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Client\signalr-client.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Client\signalr-client.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
